--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no"/>
 		<link rel="stylesheet" href="https://unpkg.com/mdui@2/mdui.css"/>
 		<link rel="shortcut icon" type="image/png" href="https://avatars.githubusercontent.com/u/117618367"/>
-		<title>AndroidIDE</title>
+		<title>Debashis Code</title>
 		<link rel="stylesheet" href="/css/index.css"/>
 	</head>
 	<body>
